# fidelity-pipeline

./: .gitignore  README.MD  docker-compose.yml
.github/workflows/: deploy.yml
consumer/: Dockerfile  pom.xml
consumer/src/main/java/com/example/consumer/controller/: TransactionController.java
consumer/src/main/java/com/example/consumer/dto/: TransactionResponse.java
consumer/src/main/java/com/example/consumer/kafka/: TransactionListener.java
consumer/src/main/java/com/example/consumer/model/: TransactionEvent.java  TransactionRecord.java
consumer/src/main/java/com/example/consumer/repository/: TransactionRepository.java
consumer/src/main/java/com/example/consumer/service/: TransactionService.java
consumer/src/main/resources/: application.yml
consumer/src/main/resources/static/: app.js  index.html  styles.css
consumer/src/test/java/com/example/consumer/: ConsumerApplicationTests.java
consumer/src/test/java/com/example/consumer/controller/: TransactionControllerTest.java
frontend/: Dockerfile  README.md  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  skeleton.tsx  table.tsx
frontend/src/lib/: api.ts
frontend/src/types/: transaction.ts
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
infra/sql/: init.sql
producer/: Dockerfile  pyproject.toml
producer/data/: transactions.csv
producer/src/transactions_producer/: main.py
producer/tests/: test_main.py
